--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shortify - Quickly shorten URLs</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <meta property="og:title" content="Shortify" />
+        <meta property="og:description" content="Simple URL Shortener" />
+        <meta property="og:image" content="https://ibb.co/sQ57xDb" />
+        <meta property="og:url" content="https://shortifyy.netlify.app/" />
+        <meta property="og:type" content="website" />
+        
+
+        <title>Shortify - Quickly shorten URLs</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
