add twtr card tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,12 @@
         <meta property="og:image" content="https://ibb.co/sQ57xDb" />
         <meta property="og:url" content="https://shortifyy.netlify.app/" />
         <meta property="og:type" content="website" />
-        
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@huss_aq" />
+        <meta name="twitter:title" content="Shortify" />
+        <meta name="twitter:description" content="Simple URL Shortener" />
+        <meta name="twitter:image" content="https://ibb.co/sQ57xDb" />
 
         <title>Shortify - Quickly shorten URLs</title>
     </head>
